# tavi_analytics

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  IMPROVEMENTS_SUMMARY.md  INSTALL_GUIDE.md  LICENSE  README.md  README_Module1.md  REFACTORING_PLAN.md  STYLE_REFACTORING_GUIDE.md  TODO_MODULE1_REFACTOR.md  UI_STYLE_SYSTEM_OVERVIEW.md  pyproject.toml  requirements.txt  test_layout.py  test_module2_framework.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
doc/: 3D Slicer 插件功能设计_.md  HALT_Analysis_New_Design.md  copilot.md  开发者模块调试需求文档.md  模块一详细设计文档_.md  模块二开发计划.md  模块二框架搭建详细文档.md  模块二详细设计文档_.md
doc/关键文档/: KEY_VIEW_PHASE_INTEGRATION_REPORT.md  PHASE_SYNC_REFACTOR_SUMMARY.md
prd/: module1.html  module2.html  module3.html  module4.html  module6.html
scripts/slicerrc/: .slicerrc.dev.py  .slicerrc.py
server/: Dockerfile  README.md  client_example.py  main.py  requirements.txt
server/dockers/: .env.example  docker-compose.deploy.yml  docker-compose.yml
tavi_analytics/: CLAUDE.md  CMakeLists.txt  __init__.py  config.json  tavi_analytics.py
tavi_analytics/Resources/: valve.nrrd  valve_config.json  valve_plane_config.json
tavi_analytics/Resources/UI/: tavi_analytics.ui
tavi_analytics/core/: __init__.py  data_models.py  domain_models.py  enums.py  module_manager.py  plugin_config.py  resource_manager.py  session.py
tavi_analytics/module1/: __init__.py  cardiac_cycle_widget.py  data_loading_dialog.py  module1_adapter.py  module1_logic.py  module1_widget.py  status_display_widget.py  step_checklist_widget.py
tavi_analytics/module1/doc/: COMPLETE_DICOM_INTEGRATION.md  README_Module1.md
tavi_analytics/module2/: __init__.py  alg_client.py  module2_adapter.py  module2_logic.py  module2_widget.py  module2_widget_clean.py
tavi_analytics/module3/: README_medical_orientation_fix.md  README_valve_plane_switch.md  __init__.py  halt_analysis_widget.py  module3_adapter.py  module3_logic.py  module3_widget.py  paste_analysis_logic.py  paste_analysis_widget.py
tavi_analytics/module3/doc/: HALT_Analysis_README.md
tavi_analytics/module3/services/: __init__.py  json_loader.py  slicer_curve_service.py
tavi_analytics/module4/: __init__.py  geometry_analysis_logic.py  geometry_analysis_widget.py  implant_depth_widget.py  module4_adapter.py  module4_logic.py  module4_widget.py
tavi_analytics/module5/: __init__.py  module5_adapter.py  module5_logic.py  module5_widget.py
tavi_analytics/module6/: __init__.py  module6_adapter.py  module6_logic.py  module6_widget.py
tavi_analytics/services/: __init__.py  contour_positioning_service.py  phase_management_service.py  valve_plane_config_service.py  view_marking_service.py
tavi_analytics/tests/: __init__.py  test_data_models.py  test_module_manager.py  test_session.py
tavi_analytics/ui/: __init__.py  main_ui.py  navigation_bar.py  style_utils.py  styles.py
tavi_analytics/utils/: __init__.py  config_manager.py  dev_utils.py  dicom_utils.py  layout_manager.py  logging_utils.py  qt_utils.py
tavi_analytics/utils/contour_position/: README.md  __init__.py  contour_position_manager.py
tavi_analytics/utils/mpr_positioning/: README.md  __init__.py  plane_position_manager.py
tavi_analytics/utils/plane_position/: README.md  __init__.py  plane_position_manager.py
tavi_analytics/utils/slicer脚本调研/: configure_sequence_2x2_views.py  mpr交互式.md  set_2x2_slice_layout.py  创建带纹理贴图的VTK正方形.md  瓣膜体数据Red视图叠加复现指南.md
tavi_analytics/widgets/: README.md  __init__.py  compact_phase_toggle.py  header_toolbar.py  key_view_manager_widget.py  phase_selection_widget.py  section_card.py  valve_info_panel.py  valve_overlay_widget.py
tmp/: slicer_complete_script.py
