# pyproject.toml - Modern Python project configuration
# This file configures various development tools for TAVR Analytics

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tavi_analytics"
version = "0.1.0"
description = "A 3D Slicer Extension for TAVR Post-Operative CT Analysis"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "TAVR Analytics Team"}
]
keywords = ["medical-imaging", "3d-slicer", "tavr", "cardiac", "ct-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://github.com/woshiheihei/tavi_analytics"
Documentation = "https://github.com/woshiheihei/tavi_analytics/tree/main/doc"
"Bug Tracker" = "https://github.com/woshiheihei/tavi_analytics/issues"
"Source Code" = "https://github.com/woshiheihei/tavi_analytics"

# Black - Python code formatter
[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']
skip-string-normalization = true
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | tavi_analytics/utils/slicer脚本调研
)/
'''

# isort - Import sorting
[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extend_skip = ["tavi_analytics/utils/slicer脚本调研"]
known_first_party = ["tavi_analytics"]
known_third_party = ["qt", "slicer", "vtk", "ctk"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest - Testing framework
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tavi_analytics/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage.py - Code coverage
[tool.coverage.run]
source = ["tavi_analytics"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/utils/slicer脚本调研/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# mypy - Static type checking
[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "tavi_analytics/utils/slicer脚本调研/",
]

[[tool.mypy.overrides]]
module = [
    "slicer.*",
    "qt.*",
    "vtk.*",
    "ctk.*",
]
ignore_missing_imports = true

# Bandit - Security linting
[tool.bandit]
exclude_dirs = [
    "/tests/",
    "/tavi_analytics/utils/slicer脚本调研/",
]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls

# Pylint - Code analysis
[tool.pylint.main]
py-version = "3.6"
jobs = 0
recursive = true

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0401",  # cyclic-import
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
    "E0401",  # import-error
    "E1101",  # no-member
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "z", "ax", "id"]

# Ruff - Fast Python linter (alternative to flake8/pylint)
[tool.ruff]
line-length = 120
target-version = "py36"
extend-exclude = [
    "tavi_analytics/utils/slicer脚本调研",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E402",  # module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B", "F"]

[tool.ruff.lint.isort]
known-first-party = ["tavi_analytics"]
known-third-party = ["qt", "slicer", "vtk", "ctk"]
